# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  README.md  README_ALT.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml
.github/workflows/: claude.yml
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: PROPOSED_FIXES.md  TEST_REPORT.md  conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_system.py
backend/tests/fixtures/: mock_data.py
frontend/: index.html  script.js  style.css
scripts/: dev.sh  format.sh  quality.sh
